--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ edition = "2018"
 # Features with a -resolver suffix simply enables the existence of a specific resolver,
 # and -accelerated suffix means that this resolver will be the default used by the Builder.
 [features]
-default = ["default-resolver"]
+default = ["default-resolver", "chacha8poly"]
 default-resolver = ["aes-gcm", "chacha20poly1305", "blake2", "sha2", "x25519-dalek", "rand"]
 nightly = ["blake2/simd_opt", "x25519-dalek/nightly", "subtle/nightly"]
 ring-resolver = ["ring"]
@@ -26,6 +26,7 @@ libsodium-accelerated = ["libsodium-resolver", "default-resolver"]
 vector-tests = []
 hfs = []
 pqclean_kyber1024 = ["pqcrypto-kyber", "pqcrypto-traits", "hfs", "default-resolver"]
+chacha8poly = ["chacha20poly1305/reduced-round"]
 xchachapoly = ["chacha20poly1305", "default-resolver"]
 risky-raw-split = []
 
